--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@defx/elementary",
-  "type": "module",
   "version": "0.0.3",
   "description": "Simple Custom Elements.",
   "main": "dist/elementary.min.js",
@@ -11,8 +10,6 @@
     "dist"
   ],
   "dependencies": {
-    "glob": "^7.1.6",
-    "glob-promise": "^3.4.0",
     "synergy": "1.3.5"
   },
   "devDependencies": {
@@ -33,7 +30,8 @@
     "test:watch": "karma start --auto-watch=true --single-run=false",
     "build": "rm -rf dist && rollup -c && npm run size",
     "size": "gzip -c9 ./dist/elementary.min.js | wc -c",
-    "coveralls": "cat ./coverage/chrome/lcov.info | coveralls"
+    "coveralls": "cat ./coverage/chrome/lcov.info | coveralls",
+    "prepublish": "npm t && npm run build"
   },
   "keywords": [
     "simple",
