--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "build": "rm -rf dist && rollup -c && npm run size",
     "size": "gzip -c9 ./dist/elementary.min.js | wc -c",
     "coveralls": "cat ./coverage/chrome/lcov.info | coveralls",
-    "prepublish": "npm t && npm run build"
+    "prepublish": "npm t && npm run build",
+    "lts": "cd ~/Projects/synergy && yarn build | cp ./dist/synergy.js ~/Projects/elementary"
   },
   "keywords": [
     "simple",
