--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist"
   ],
   "dependencies": {
-    "synergy": "1.3.6"
+    "synergy": "1.4.0"
   },
   "devDependencies": {
     "@open-wc/karma-esm": "^3.0.5",
@@ -31,8 +31,7 @@
     "build": "rm -rf dist && rollup -c && npm run size",
     "size": "gzip -c9 ./dist/elementary.min.js | wc -c",
     "coveralls": "cat ./coverage/chrome/lcov.info | coveralls",
-    "prepublish": "npm t && npm run build",
-    "lts": "cd ~/Projects/synergy && yarn build | cp ./dist/synergy.js ~/Projects/elementary"
+    "prepublish": "npm t && npm run build"
   },
   "keywords": [
     "simple",
